--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-github-btn": "^1.2.0",
     "react-github-button": "^0.1.11",
     "react-helmet": "^6.1.0",
+    "react-typical": "^0.1.3",
     "sharp": "^0.26.3",
     "styled-components": "^5.1.1"
   },
